--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -1,4 +1,3 @@
-
 <section>
     <div class="main-page__title">Медаль "78 лет Победы над Японией"</div>
     <div class="main-page__avatar-block">
@@ -12,17 +11,16 @@
     <div>
         <img src="https://ic.pics.livejournal.com/colonelcassad/19281164/3992357/3992357_900.jpg" alt="image">
     </div>
-
 </section>
-<div>
-    <h3>Count user comments from React</h3><span id="reactEnter" comments-count="" ></span>
+<div class="react-count-block">
+    <div>Count user comments from React :</div><span id="reactEnter" comments-count="" ></span>
 </div>
 
 <div class="hr"><hr></div>
 
 <div ng-loading="commentsSectionId"></div>
 <div ng-if="noCommentsAtAll">Будь первым! Добавь свой комментарий <a href="javascript:void(0);">оставить отзыв</a></div>
-<section id="commentsSectionId" style="display: block">
+<section id="commentsSectionId" >
    <div ng-include="'/commentsSection.html' | baseUrl"></div>
 </section>
 <style>
